2003-10-05  Bruno Haible  <bruno@clisp.org>

	* message.h (enum is_format): New item yes_according_to_context.
	* message.c (possible_format_p): Handle also yes_according_to_context.
	* write-po.c (make_format_description_string): Likewise.

	* xgettext.h (struct flag_context_ty): New type.
	(null_context, passthrough_context): New declarations.
	(inherited_context): New declaration.
	(struct flag_context_list_ty): New type.
	(struct flag_context_list_iterator_ty): New type.
	(null_context_list_iterator, passthrough_context_list_iterator): New
	declarations.
	(flag_context_list_iterator): New declaration.
	(flag_context_list_iterator_advance): New declaration.
	(flag_context_list_table_ty): New type.
	(flag_context_list_table_lookup): New declaration.
	(xgettext_record_flag): New declaration.
	(remember_a_message, remember_a_message_plural): Add context argument.
	* xgettext.c: Include alloca.h.
	(flag_table_c, flag_table_gcc_internal, flag_table_sh,
	flag_table_python, flag_table_lisp, flag_table_elisp,
	flag_table_librep, flag_table_java, flag_table_awk, flag_table_ycp,
	flag_table_tcl, flag_table_perl, flag_table_php): New variables.
	(long_options): Add option --flag.
	(extractor_func): Add argument flag_table.
	(struct extractor_ty): New type.
	(main): Use type 'extractor_ty' instead of 'extractor_func'.
	Invoke init_flag_table_c(), init_flag_table_gcc_internal(),
	init_flag_table_sh(), init_flag_table_python(), init_flag_table_lisp(),
	init_flag_table_elisp(), init_flag_table_librep(),
	init_flag_table_java(), init_flag_table_awk(), init_flag_table_ycp(),
	init_flag_table_tcl(), init_flag_table_perl(), init_flag_table_php().
	Implement option --flag.
	(usage): Rename a section to "Language specific options". Document
	the languages to which --extract-all, --keyword, --trigraphs are
	applicable. Document option --flag.
	(null_context): New variable.
	(passthrough_context): New variable.
	(inherited_context): New function.